--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,20 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-07 Mon 15:19]
+#+CAPTION: Clock summary at [2016-11-07 Mon 16:55]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:29* |      |      | 100.0 |
+| *Total time*                                                                | *7:04* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:29   |      |      | 100.0 |
-| Active                                                                      |        | 6:29 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   2.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   6.9 |
-| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  17.2 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  29.6 |
-| STARTED Try to fix BinTray problems                                         |        |      | 1:09 |  17.7 |
-| STARTED Supply model references via meta-data rather than command line      |        |      | 1:41 |  26.0 |
+| Stories                                                                     | 7:04   |      |      | 100.0 |
+| Active                                                                      |        | 7:04 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   2.4 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   6.4 |
+| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  15.8 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  27.1 |
+| COMPLETED Try to fix BinTray problems                                       |        |      | 1:09 |  16.3 |
+| STARTED Supply model references via meta-data rather than command line      |        |      | 2:16 |  32.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -107,7 +107,8 @@ Links:
 - [[https://cmake.org/pipermail/cmake/2010-September/039468.html][PIE and PIC in mixed projects]]
 - [[http://stackoverflow.com/questions/38296756/what-is-the-idiomatic-way-in-cmake-to-add-the-fpic-compiler-option][What is the idiomatic way in CMAKE to add the -fPIC compiler option?]]
 
-*** STARTED Try to fix BinTray problems                               :story:
+*** COMPLETED Try to fix BinTray problems                             :story:
+    CLOSED: [2016-11-07 Mon 16:30]
     CLOCK: [2016-11-07 Mon 13:15]--[2016-11-07 Mon 13:34] =>  0:19
     CLOCK: [2016-11-07 Mon 12:20]--[2016-11-07 Mon 12:34] =>  0:14
     CLOCK: [2016-11-07 Mon 11:43]--[2016-11-07 Mon 12:19] =>  0:36
@@ -128,6 +129,7 @@ resulted in a =$1= package, presumably because we are not using
 regexes. We need to hard-code the name.
 
 *** STARTED Supply model references via meta-data rather than command line :story:
+    CLOCK: [2016-11-07 Mon 16:20]--[2016-11-07 Mon 16:55] =>  0:35
     CLOCK: [2016-11-07 Mon 14:13]--[2016-11-07 Mon 15:19] =>  1:06
     CLOCK: [2016-11-07 Mon 14:07]--[2016-11-07 Mon 14:12] =>  0:05
     CLOCK: [2016-11-07 Mon 13:36]--[2016-11-07 Mon 14:06] =>  0:30
