--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,20 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-07 Mon 16:55]
+#+CAPTION: Clock summary at [2016-11-07 Mon 17:05]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:04* |      |      | 100.0 |
+| *Total time*                                                                | *7:13* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:04   |      |      | 100.0 |
-| Active                                                                      |        | 7:04 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   2.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   6.4 |
-| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  15.8 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  27.1 |
-| COMPLETED Try to fix BinTray problems                                       |        |      | 1:09 |  16.3 |
-| STARTED Supply model references via meta-data rather than command line      |        |      | 2:16 |  32.1 |
+| Stories                                                                     | 7:13   |      |      | 100.0 |
+| Active                                                                      |        | 7:13 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   2.3 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   6.2 |
+| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  15.5 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  26.6 |
+| COMPLETED Try to fix BinTray problems                                       |        |      | 1:09 |  15.9 |
+| STARTED Supply model references via meta-data rather than command line      |        |      | 2:25 |  33.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -129,6 +129,7 @@ resulted in a =$1= package, presumably because we are not using
 regexes. We need to hard-code the name.
 
 *** STARTED Supply model references via meta-data rather than command line :story:
+    CLOCK: [2016-11-07 Mon 16:56]--[2016-11-07 Mon 17:05] =>  0:09
     CLOCK: [2016-11-07 Mon 16:20]--[2016-11-07 Mon 16:55] =>  0:35
     CLOCK: [2016-11-07 Mon 14:13]--[2016-11-07 Mon 15:19] =>  1:06
     CLOCK: [2016-11-07 Mon 14:07]--[2016-11-07 Mon 14:12] =>  0:05
