add initial support for yarn.json test data sets

--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -199,6 +199,38 @@ We need to move these two into the meta-data. This would also mean we
 no longer need to pass in external module paths for references, which
 is much cleaner.
 
+*** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-07 Mon 20:49]--[2016-11-07 Mon 21:41] =>  0:52
+
+#+begin_quote
+*Story*: As a dogen user, I want to be able to write my domain models
+in JSON since I don't have any need for UML visualisation.
+#+end_quote
+
+At present we are using an yarn JSON format to supply Dogen the system
+libraries. However, there is nothing stopping us from having a
+full-blown JSON frontend useful for code generation. For this we need:
+
+- flag to state if its a target model or not;
+- ability to supply external module path;
+- ability to supply all of the missing information for yarn types
+  (properties for object, stereotypes, enumerations, etc).
+
+In order to test this we could generate a model from both Dia and JSON
+and make sure we arrive at the same yarn.
+
+As part of this work we probably need to create a new stage in the yarn
+pipeline where we populate:
+
+- inheritance related properties (is_parent, leaves, is_final)
+
+We need to look at the dia to sml transformer and see what it is doing
+that is also required by JSON and move it to yarn.
+
+We should have a look at the Boost Fusion approach:
+
+- [[http://jrruethe.github.io/blog/2015/05/21/boost-fusion-json-serializer/][Boost Fusion JSON Serialiser]]
+
 *** External module path for target should be in diagram              :story:
 
 We should have a way to provide external module path from within the
