--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,20 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-07 Mon 18:25]
+#+CAPTION: Clock summary at [2016-11-07 Mon 22:06]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:31* |      |      | 100.0 |
+| *Total time*                                                                | *9:45* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:31   |      |      | 100.0 |
-| Active                                                                      |        | 8:31 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   2.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   5.3 |
-| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  13.1 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  22.5 |
-| COMPLETED Try to fix BinTray problems                                       |        |      | 1:09 |  13.5 |
-| STARTED Supply model references via meta-data rather than command line      |        |      | 3:43 |  43.6 |
+| Stories                                                                     | 9:45   |      |      | 100.0 |
+| Active                                                                      |        | 9:45 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   1.7 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   4.6 |
+| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  11.5 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  19.7 |
+| COMPLETED Try to fix BinTray problems                                       |        |      | 1:09 |  11.8 |
+| COMPLETED Supply model references via meta-data rather than command line    |        |      | 3:43 |  38.1 |
+| STARTED Make JSON yarn a fully supported frontend                           |        |      | 1:14 |  12.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -200,6 +201,7 @@ no longer need to pass in external module paths for references, which
 is much cleaner.
 
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-07 Mon 21:42]--[2016-11-07 Mon 22:04] =>  0:22
     CLOCK: [2016-11-07 Mon 20:49]--[2016-11-07 Mon 21:41] =>  0:52
 
 #+begin_quote
@@ -238,6 +240,16 @@ diagram, like we do with references. It really does not make sense to
 provide different values for this since the code will not work (and
 since the external module path for the references is already in the
 diagram).
+
+*Previous Understanding*
+
+- this is not an issue as the name builder does the splitting.
+
+A related problem is that we do not support nested external module
+paths at present; the code seems to assume it is only one module
+deep. This can be fixed by adding some processing code in name factory
+for the cases where external module path is a string (i.e. look for
+=::= and split accordingly).
 
 *** Merge properties factory with stitching factory                   :story:
 
