--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-07 Mon 22:06]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:45* |      |      | 100.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:45   |      |      | 100.0 |
-| Active                                                                      |        | 9:45 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   1.7 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:27 |   4.6 |
-| COMPLETED Tidy-up README file                                               |        |      | 1:07 |  11.5 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |        |      | 1:55 |  19.7 |
-| COMPLETED Try to fix BinTray problems                                       |        |      | 1:09 |  11.8 |
-| COMPLETED Supply model references via meta-data rather than command line    |        |      | 3:43 |  38.1 |
-| STARTED Make JSON yarn a fully supported frontend                           |        |      | 1:14 |  12.6 |
+#+CAPTION: Clock summary at [2016-11-07 Mon 22:42]
+| <75>                                                                        |         |       |      |       |
+| Headline                                                                    | Time    |       |      |     % |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                                                | *10:22* |       |      | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                                     | 10:22   |       |      | 100.0 |
+| Active                                                                      |         | 10:22 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   1.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   4.3 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |  10.8 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  18.5 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |  11.1 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  35.9 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 1:51 |  17.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -201,6 +201,7 @@ no longer need to pass in external module paths for references, which
 is much cleaner.
 
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-07 Mon 22:05]--[2016-11-07 Mon 22:42] =>  0:37
     CLOCK: [2016-11-07 Mon 21:42]--[2016-11-07 Mon 22:04] =>  0:22
     CLOCK: [2016-11-07 Mon 20:49]--[2016-11-07 Mon 21:41] =>  0:52
 
