--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-07 Mon 22:50]
+#+CAPTION: Clock summary at [2016-11-07 Mon 22:53]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:29* |       |      | 100.0 |
+| *Total time*                                                                | *10:31* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:29   |       |      | 100.0 |
-| Active                                                                      |         | 10:29 |      | 100.0 |
+| Stories                                                                     | 10:31   |       |      | 100.0 |
+| Active                                                                      |         | 10:31 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   1.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   4.3 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |  10.7 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  18.3 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |  11.0 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  35.5 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 1:58 |  18.8 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |  10.6 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  18.2 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |  10.9 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  35.3 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 2:00 |  19.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -201,6 +201,7 @@ no longer need to pass in external module paths for references, which
 is much cleaner.
 
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-07 Mon 22:51]--[2016-11-07 Mon 22:53] =>  0:02
     CLOCK: [2016-11-07 Mon 22:43]--[2016-11-07 Mon 22:50] =>  0:07
     CLOCK: [2016-11-07 Mon 22:05]--[2016-11-07 Mon 22:42] =>  0:37
     CLOCK: [2016-11-07 Mon 21:42]--[2016-11-07 Mon 22:04] =>  0:22
