--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-07 Mon 23:02]
+#+CAPTION: Clock summary at [2016-11-08 Tue 10:50]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:38* |       |      | 100.0 |
+| *Total time*                                                                | *11:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:38   |       |      | 100.0 |
-| Active                                                                      |         | 10:38 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   1.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   4.2 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |  10.5 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  18.0 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |  10.8 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  35.0 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 2:07 |  19.9 |
+| Stories                                                                     | 11:51   |       |      | 100.0 |
+| Active                                                                      |         | 11:51 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   1.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   3.8 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   9.4 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  16.2 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   9.7 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  31.4 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 3:20 |  28.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -201,6 +201,8 @@ no longer need to pass in external module paths for references, which
 is much cleaner.
 
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-08 Tue 10:25]--[2016-11-08 Tue 10:50] =>  0:25
+    CLOCK: [2016-11-08 Tue 08:30]--[2016-11-08 Tue 09:18] =>  0:48
     CLOCK: [2016-11-07 Mon 22:56]--[2016-11-07 Mon 23:02] =>  0:06
     CLOCK: [2016-11-07 Mon 22:54]--[2016-11-07 Mon 22:55] =>  0:01
     CLOCK: [2016-11-07 Mon 22:51]--[2016-11-07 Mon 22:53] =>  0:02
