--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-08 Tue 11:45]
+#+CAPTION: Clock summary at [2016-11-08 Tue 12:50]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:44* |       |      | 100.0 |
+| *Total time*                                                                | *13:13* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:44   |       |      | 100.0 |
-| Active                                                                      |         | 12:44 |      | 100.0 |
+| Stories                                                                     | 13:13   |       |      | 100.0 |
+| Active                                                                      |         | 13:13 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   1.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   3.5 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   8.8 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  15.1 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   9.0 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  29.2 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 4:13 |  33.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   3.4 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   8.4 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  14.5 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   8.7 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  28.1 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 4:42 |  35.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -201,6 +201,8 @@ no longer need to pass in external module paths for references, which
 is much cleaner.
 
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-08 Tue 12:40]--[2016-11-08 Tue 12:50] =>  0:10
+    CLOCK: [2016-11-08 Tue 11:46]--[2016-11-08 Tue 12:05] =>  0:19
     CLOCK: [2016-11-08 Tue 11:07]--[2016-11-08 Tue 11:45] =>  0:38
     CLOCK: [2016-11-08 Tue 10:51]--[2016-11-08 Tue 11:06] =>  0:15
     CLOCK: [2016-11-08 Tue 10:25]--[2016-11-08 Tue 10:50] =>  0:25
