agile: analysis work on json

--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -201,6 +201,7 @@ no longer need to pass in external module paths for references, which
 is much cleaner.
 
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-08 Tue 14:11]--[2016-11-08 Tue 15:45] =>  1:34
     CLOCK: [2016-11-08 Tue 14:08]--[2016-11-08 Tue 14:10] =>  0:02
     CLOCK: [2016-11-08 Tue 14:03]--[2016-11-08 Tue 14:07] =>  0:04
     CLOCK: [2016-11-08 Tue 13:40]--[2016-11-08 Tue 14:02] =>  0:22
@@ -247,13 +248,40 @@ We should have a look at the Boost Fusion approach:
 
 - [[http://jrruethe.github.io/blog/2015/05/21/boost-fusion-json-serializer/][Boost Fusion JSON Serialiser]]
 
-*** External module path for target should be in diagram              :story:
+*** STARTED External module path for target should be in diagram      :story:
+    CLOCK: [2016-11-08 Tue 15:46]--[2016-11-08 Tue 16:04] =>  0:18
 
 We should have a way to provide external module path from within the
 diagram, like we do with references. It really does not make sense to
 provide different values for this since the code will not work (and
 since the external module path for the references is already in the
 diagram).
+
+This has a few interesting implications:
+
+- we won't need to provide the pseudo kvps for references like we do
+  now, since the models themselves will already have the external
+  module path.
+- the annotation can be a yarn.dia field like =yarn.dia.comment= is;
+  this would allow us to process it early on in the front-end rather
+  than in the guts of yarn. The downside is that we need to figure out
+  how to update all elements once the external module path is
+  known. However, since references are computing during merging, this
+  means we do not have to worry about them.
+- actually this is not quite so simple. The keys for the maps use the
+  external module path, so they all need to be recomputed; all objects
+  need to be reinserted. We need to somehow figure this information
+  out before we do any processing to the diagram. We could go directly
+  to the processed objects and look for this kvp before we generate
+  the graph. We need to locate a UML note that has no parent, with a
+  comment which applies to parent object; the comment processor can
+  extract the external module directly. We can supply it to the
+  builder and the rest of the processing remains the same.
+- in JSON we can supply external module path as part of JSON itself
+  rather than an annotation. In addition, we can do this up front
+  before we process any elements so there is no need to
+  update/post-process the entire model.
+
 
 *Previous Understanding*
 
