yarn.json: finish adding support for concepts and stereotypes

--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,22 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-09 Wed 21:38]
+#+CAPTION: Clock summary at [2016-11-10 Thu 12:12]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:11* |       |      | 100.0 |
+| *Total time*                                                                | *19:22* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:11   |       |      | 100.0 |
-| Active                                                                      |         | 17:11 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   1.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   2.6 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   6.5 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |  11.2 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   6.7 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  21.6 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 8:22 |  48.7 |
-| STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.7 |
+| Stories                                                                     | 19:22   |       |      | 100.0 |
+| Active                                                                      |         | 19:22 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   2.3 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   5.8 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   9.9 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.9 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  19.2 |
+| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   3.4 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  51.1 |
+| STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -201,7 +202,16 @@ We need to move these two into the meta-data. This would also mean we
 no longer need to pass in external module paths for references, which
 is much cleaner.
 
+*** COMPLETED Remove trailing blank lines in comments                 :story:
+    CLOSED: [2016-11-10 Thu 12:07]
+    CLOCK: [2016-11-10 Thu 11:28]--[2016-11-10 Thu 12:07] =>  0:39
+
+We should remove the annoying trailing lines in comments as it is
+causing spurious diffs with JSON.
+
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-10 Thu 12:07]--[2016-11-10 Thu 12:12] =>  0:05
+    CLOCK: [2016-11-10 Thu 10:00]--[2016-11-10 Thu 11:27] =>  1:27
     CLOCK: [2016-11-09 Wed 20:45]--[2016-11-09 Wed 21:38] =>  0:53
     CLOCK: [2016-11-09 Wed 12:35]--[2016-11-09 Wed 13:20] =>  0:45
     CLOCK: [2016-11-08 Tue 14:11]--[2016-11-08 Tue 15:45] =>  1:34
